# graphOS

./: .gitignore  LICENSE  README.md  boot-run-current.txt  boot-transcript.txt  cmd3_output.txt  host-test-check-current.txt  host-test-check.txt  modeld-check.txt
apps/ai-air-hockey/: Cargo.toml
apps/editor/: Cargo.toml
apps/files/: Cargo.toml
apps/files/src/: main.rs
apps/shell3d/: Cargo.toml
graphos/: Cargo.toml  Makefile  rust-toolchain.toml
graphos/apps/ai-air-hockey/src/: main.rs
graphos/apps/ai-console/: Cargo.toml
graphos/apps/browser-lite/: Cargo.toml
graphos/apps/editor/src/: main.rs
graphos/apps/shell3d/src/: gl3d.rs  main.rs
graphos/apps/terminal/: Cargo.toml
graphos/apps/terminal/src/: main.rs
graphos/boot/uefi-loader/: Cargo.toml
graphos/docs/abi/: syscall-numbers.sha256
graphos/installer/src/: main.rs  uefi-stub.rs
graphos/kernel/src/: main.rs  orchestrator.rs  userland.rs
graphos/kernel/src/acpi/: mod.rs
graphos/kernel/src/apps/: inputharness.rs  operator.rs  terminal.rs
graphos/kernel/src/arch/: interrupts.rs  machine.rs  serial.rs
graphos/kernel/src/cognitive/: bm25.rs  correlation.rs  lanczos.rs  lsh.rs  redact.rs
graphos/kernel/src/crypto/: chacha20poly.rs
graphos/kernel/src/drivers/: wifi.rs
graphos/kernel/src/fonts/: mod.rs
graphos/kernel/src/gfx/: font_atlas.rs  mod.rs
graphos/kernel/src/graph/: bootstrap.rs  causal.rs  handles.rs  pattern.rs  seed.rs  twin.rs  types.rs  walsh.rs  wtg.rs
graphos/kernel/src/grid/: mod.rs
graphos/kernel/src/input/: event.rs  pointer.rs  router.rs
graphos/kernel/src/ipc/: channel.rs  graphd_proto.rs  seqlock.rs
graphos/kernel/src/mm/: address_space.rs  mod.rs  phys.rs  swap.rs
graphos/kernel/src/net/: ethernet.rs  http.rs  icmpv6.rs  ipv6.rs  mod.rs  ndp.rs  udp.rs
graphos/kernel/src/registry/: mod.rs
graphos/kernel/src/security/: audit.rs
graphos/kernel/src/session/: mod.rs
graphos/kernel/src/storage/: block.rs  mod.rs
graphos/kernel/src/svc/: mod.rs
graphos/kernel/src/task/: context.rs  mod.rs  reaper.rs
graphos/kernel/src/tests/: alloc_large.rs  heap_reuse.rs  mod.rs  nvme_tests.rs  sched_tests.rs
graphos/kernel/src/tpm/: attestation.rs
graphos/kernel/src/ui/: direct_present_policy.rs  mod.rs  tokens.rs
graphos/kernel/src/update/: mod.rs
graphos/kernel/src/vfs/: bootfs.rs  fat32fs.rs  pkgfs.rs  ramfs.rs
graphos/kernel/src/wasm/: mod.rs
graphos/kernel/src/wm/: compositor.rs  effects.rs  gpu.rs  gpu_compositor.rs  gpu_exec.rs  mod.rs
graphos/scripts/: boot.ps1  sdk-check.ps1  setup-ai-stack.ps1
graphos/sdk/app-sdk/src/: accessibility.rs  canvas.rs  clipboard.rs  lib.rs
graphos/sdk/gl-sdk/src/: demo.rs  math.rs  mesh.rs  text.rs  texture.rs  ui.rs
graphos/sdk/gl-sdk/tests/: error_behavior.rs
graphos/sdk/graph-sdk/: Cargo.toml
graphos/sdk/graphhash/: Cargo.toml
graphos/sdk/graphhash/src/: lib.rs
graphos/sdk/ui-sdk/: Cargo.toml
graphos/tools/oem-image/: Cargo.toml
graphos/tools/pkgmgr/: Cargo.toml
graphos/userspace/artifactsd/: Cargo.toml
graphos/userspace/gfx/: Cargo.toml
graphos/userspace/greeter/: Cargo.toml
graphos/userspace/modeld/: Cargo.toml
graphos/userspace/protected/: link.ld
graphos/userspace/scene/: Cargo.toml
graphos/userspace/shell/: Cargo.toml
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: bootinfo.rs  bootstrap_manifest.rs  diag.rs  display_blit.rs  lib.rs  panic.rs  unsafe_policy.rs  uuid.rs
kernel/src/acpi/: hpet.rs  pm.rs
kernel/src/apps/: logview.rs  mod.rs  sceneview.rs
kernel/src/arch/: mod.rs  timer.rs
kernel/src/audit/: mod.rs
kernel/src/cognitive/: engine.rs  indexing.rs  kneser_ney.rs  memory.rs  mod.rs  pagerank.rs  pipeline.rs  sketch.rs  spectral_refresh.rs
kernel/src/crypto/: aes_xts.rs  curve25519.rs  ed25519_interop_test.rs  ed25519_sign.rs  mod.rs
kernel/src/drivers/: battery.rs  display.rs  mod.rs  nvme.rs  thermal.rs
kernel/src/fido2/: mod.rs
kernel/src/gfx/: canvas.rs  surface.rs
kernel/src/graph/: arena.rs  mod.rs  spectral.rs  temporal.rs  tensor.rs  walk.rs
kernel/src/grid/: discovery.rs  protocol.rs  remote_ipc.rs  remote_mem.rs  remote_task.rs  remote_vfs.rs  resource.rs
kernel/src/input/: diagnostics.rs  mod.rs
kernel/src/ipc/: capability.rs  mod.rs  modeld_proto.rs  msg.rs  scce_proto.rs
kernel/src/ldap/: mod.rs
kernel/src/mm/: frame_alloc.rs  heap.rs  kaslr.rs  page_cache.rs  page_table.rs  reserved.rs
kernel/src/net/: arp.rs  dhcp.rs  icmp.rs  ipv4.rs  tcp.rs  tls.rs
kernel/src/perf/: mod.rs
kernel/src/sched/: mod.rs  percpu.rs
kernel/src/security/: mod.rs  seccomp.rs
kernel/src/storage/: meta.rs
kernel/src/syscall/: mod.rs  numbers.rs
kernel/src/task/: stack_pool.rs  switch.rs  table.rs  tcb.rs
kernel/src/tests/: address_space_smoke.rs  graphics_smoke.rs  indexing.rs  net_tests.rs  security.rs  vfs_smoke.rs
kernel/src/tpm/: mod.rs
kernel/src/ui/: desktop.rs
kernel/src/users/: mod.rs
kernel/src/vfs/: ext2fs.rs  graphfs.rs  mod.rs  persistfs.rs  posixfs.rs
kernel/src/wasm/: loader.rs  sandbox.rs
kernel/src/watchdog/: mod.rs
kernel/src/wm/: damage.rs  gpu_backend.rs  scene.rs  scene_compositor.rs  surface_table.rs  window.rs  workspace.rs
kernel/tests/: bootinfo_contract.rs  e2e_qemu_serial.rs  net_loopback_api.rs
sdk/gl-sdk/: Cargo.toml
sdk/gl-sdk/src/: compositor.rs  gl.rs  glsl_interp.rs  lib.rs  pipeline.rs  shader.rs  thread.rs
sdk/gl-sdk/tests/: api_state.rs  gl_desktop_tests.rs
sdk/tool-sdk/: Cargo.toml
sdk/tool-sdk/src/: lib.rs
sdk/tool-sdk/tests/: tpm_attestation_hostile.rs
sdk/wasm-sdk/: Cargo.toml
tools/appstore/: Cargo.toml
tools/appstore/src/: main.rs
tools/fuzz/: Cargo.toml
tools/fuzz/fuzz_targets/: fuzz_syscall_dispatch.rs
tools/fuzz/src/: lib.rs
userspace/compositor/: Cargo.toml
userspace/compositor/src/: geom.rs  gfx_context.rs  passes.rs  render_graph.rs  render_node.rs  scene.rs  theme.rs
userspace/protected/: Cargo.toml  bootstrap.graph  build.rs
userspace/protected/kernel/: linker.ld
userspace/protected/src/: workspace_context.rs
(+153 files in other folders)
