# Copyright (c) 2024-2026 Ryan P. Walsh. All rights reserved.
[package]
name = "graphos-ai-air-hockey"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "graphos-ai-air-hockey"
path = "src/main.rs"

[dependencies]

graphos-app-sdk = { path = "../../sdk/app-sdk" }
graphos-ui-sdk  = { path = "../../sdk/ui-sdk"  }

