# Copyright (c) 2024-2026 Ryan P. Walsh. All rights reserved.
[package]
name = "graphos-gl"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
name = "graphos_gl"
path = "src/lib.rs"

[dependencies]
libm = { version = "0.2", default-features = false }
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }
graphhash = { path = "../graphhash" }

[features]
default = []

# The crate is no_std but uses alloc (Vec, Box, etc.) which is provided
# by the kernel build-std chain at link time.
