# Copyright (c) 2024-2026 Ryan P. Walsh. All rights reserved.
[package]
name        = "graphos-scene"
version     = "0.1.0"
edition     = "2021"

[dependencies]
graphos-gfx = { path = "../gfx" }
libm        = { version = "0.2", default-features = false }

[lib]
name = "graphos_scene"
path = "src/lib.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
